# eem

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/eem/: __init__.py  cache.py  entsoepywrapper.py  task.py
src/eem/analysis/: __init__.py  compare.py  describe.py  match.py
src/eem/llm/: __init__.py  basic.py
