[project]
name = "eem"
version = "0.1.0"
description = "EEM: Explain Electricity Markets"
readme = "README.md"
authors = [
    { name = "Stefan Strömer", email = "8915976+sstroemer@users.noreply.github.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "entsoe-py>=0.6.16",
    "pathlib>=1.0.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120
